# clawd

./: .dharmic_claw_state.json  .discord_engagement_state.json  .email_monitor_state.json  .gitignore  .hourly_state.json  8_HOUR_BUILD_CYCLE.md  90_DAY_PLAN.md  AGENTS.md  AGGRESSIVE_EMAIL_TEST_REPORT.md  AGNI_EMAIL_RECOMMENDATION.md  AGNI_READING_LIST.md  AGNI_RESPONSE_AMENDMENTS.md  ALL_PATHS_DEPLOYMENT.md  ANALYSIS_WHAT_WRONG.md  ANTI_NVIDIA_PLAYBOOK.md  ANTI_SLOP_QUALITY_PROTOCOL.md  AUTONOMOUS_ARCHITECTURE_v4.0.md  BIG_PICTURE_VISION.md  BUILD_PROGRESS_SNAPSHOT.md  CAPABILITY_AUDIT.md  CODEBASE_IMPROVEMENT_REPORT.md  COMPETITIVE_LANDSCAPE.md  CONSTITUTION.md  CONTINUATION.md  CORE_IDENTITY.md  CORRECTION_YOURE_RIGHT.md  COUNCIL_SWARM_DELIBERATION.md  DC_CONFIG_PATCH.json  DC_DEPLOYMENT_STATUS.md  DC_PONG.md  DC_POWER_PROMPT.md  DC_TO_RUSHABDEV_URGENT.md  DGC_PAYLOAD_SPEC.json  DHARMIC_AGORA_ARCHITECTURE_COMPLETE.md  DHARMIC_AGORA_BLUEPRINT.md  DHARMIC_WRITING_PIPELINE.md  DISCORD_SETUP.txt  DURGA_1008_ARMED_ORCHESTRATOR.md  EMERGENCY_CONTACT_RUSHABDEV.md  FILE_ORGANIZATION_GUIDE.md  (+199 more)
.clawhub/: lock.json
.git-rewrite/: backup-refs  commit  index  message  parse  revs
DELIVERABLES/: 3_REVENUE_PROPOSALS.md  DAILY_BRIEF.md  JIKOKU_SUMMARY.md  Medium_Article_Draft.md  REVENUE_MODELS_BRIEF.md  R_V_TOP_10_SYNTHESIS.md
KITCHEN_SINK/: COSMIC_KRISHNA_CODER_FORENSIC_ANALYSIS.md  GATE_0_RISK_ASSESSMENT.md  HARD_LOGIC_AUDIT.md  README.md
SAB_GENESIS/: core_transmission_2026-02-10.md
SHAKTI_GINKO/: README.md
Staging-Anti_SLOP/: README.md
agent_responses/: induction_20260203_122036.json  induction_20260203_122109.json  induction_20260203_122109.md  induction_20260203_122752.json
agents/: AGENT_01_R_V_Research_Executor.md  AGENT_02_Code_Security_Reviewer.md  AGENT_03_Revenue_Content_Forge.md  AGENT_04_Memory_Pattern_Curator.md  AGENT_05_Infrastructure_Guardian.md
agora-landing/: package.json  vercel.json
architecture/: CHAIWALA_NATS_DECISION.md  NATS_INTEGRATION_FULL.md
audit/: CROSS_SYSTEM_AUDIT_2026-02-14.md  META_JOURNAL_SYSTEM_MAP.md  RUNNING_AUDIT_LOG.md  SYSTEM_WIDE_AUDIT.md
audits/: MI_BUILD_REVIEW_REPORT.md  skill_accuracy_audit_20260204.md
autonomous_revenue/: SYSTEM_STATUS.md
backups/: swarm-config.yaml
brainstorms/: brainstorm_3a66fe9e_20260205_135617.json  brainstorm_3a66fe9e_20260205_135617.md  supramental_cb02a439.json
chaiwala_workspace/: SOUL.md  activate_chaiwala.py  chaiwala.py  collab_protocol.py  read_messages.py  respond_warp_regent.py  test_collab_protocol.py
chaiwala_workspace/chaiwala-rs/: Cargo.toml
chaiwala_workspace/chaiwala-rs/src/: main.rs
config/: himalaya.1
content/: AUROBINDO_MONEY_ARTICLE.html  AUROBINDO_MONEY_ARTICLE.md  GUMROAD_LANDING.md  PULSE_007_FINAL_REPORT.md  REVENUE_TRACKING.md  SHIP_CHECKLIST.md  SUBSTACK_PREVIEW.md
coordination/: ANDON_BOARD.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  TPS_OPENCLAW_ARCHITECTURE.md  TRISHULA_WS_MASTER_PLAN.md  andon_board.py  cell_build.py  cell_research.py  cell_ship.py  crontab.master  heartbeat_cascade.py  install.sh  kaizen_review.py  night_brief.py  takt_master.py  wake_sync.py
council_reviews/: ARCHITECT_REVIEW.md  COMPETITIVE_LANDSCAPE.md  DHARMIC_ALIGNMENT.md  EXECUTIVE_DECISION.md  OPENCLAW_INTEGRATION.md
council_workspace/: SOUL.md
cron/: signal-integration-daemon.yml
deep_analysis/: 01_CYBERNETIC_STRUCTURE.md  02_EVOLUTIONARY_LANDSCAPE.md  03_SYNTROPIC_ATTRACTORS.md  05_COMPRESSION_KERNEL.md  06_RECURSIVE_FIXED_POINT.md  07_PHASE_TRANSITIONS.md  08_HIGHEST_SIGNAL_EXECUTION.md
deploy_logs/: DEPLOY_LOG_001.md
docs/: ML_GATES_SPECIFICATION.md  SUBAGENT_QUICKSTART.md  TOP_50_QUALITY_REFERENCE.md  WEB_UI_ACCESS.md
email_drafts/: READY_nvidia_grant_send.txt  SEND_NVIDIA_APPLICATIONS.sh  nvidia_academic_grant_SHORT.txt  nvidia_academic_grant_application.txt
email_reports/: hourly_0000.txt  hourly_0300.txt  hourly_0400.txt  hourly_0500.txt  hourly_0700.txt  hourly_0800.txt  (+8 more)
pratyabhijna/core/: Cargo.toml
pratyabhijna/core/src/: lib.rs  main.rs
pratyabhijna/core/src/database/: mod.rs
pratyabhijna/core/src/recognition/: mod.rs
pratyabhijna/core/src/svd/: mod.rs
pratyabhijna/core/src/websocket/: mod.rs
pratyabhijna/py/: Cargo.toml  pyproject.toml
pratyabhijna/py/python/pratyabhijna/: __init__.py  models.py
pratyabhijna/py/python/pratyabhijna/hooks/: __init__.py
pratyabhijna/py/src/: lib.rs
products/rv-toolkit-gumroad/: GUMROAD_README.md  IMPLEMENTATION_SUMMARY.md  SKILL.md  __init__.py  pyproject.toml  rv.py  setup.py  skill.json
products/rv-toolkit-gumroad/rv_toolkit/: __init__.py  analysis.py  cli.py  hooks.py  metrics.py  patching.py  prompts.py
products/rv-toolkit-gumroad/rv_toolkit/analysis_scripts/: check_c2_results.py  compute_c2_statistics.py
products/rv-toolkit-gumroad/rv_toolkit/cli_tools/: verify_research_ready.py
products/rv-toolkit-gumroad/rv_toolkit/infrastructure/: openclaw_quickstart.py
products/rv-toolkit-gumroad/rv_toolkit/measurement/: gemma_rv_trajectory_source.py
products/rv-toolkit-gumroad/rv_toolkit/prompt_generation/: create_prompt_families.py  pull_missing_prompt_sets.py
products/rv-toolkit-gumroad/tests/: test_analysis.py  test_metrics.py
skills/mi-experimenter/: SKILL.md  __init__.py  cli.py  pyproject.toml  setup.py  smoke_test.py  test_install.sh
skills/mi-experimenter/core/: __init__.py  model_loader.py  rv_validator.py
skills/mi-experimenter/examples/: minimal_working_example.py
skills/mi-experimenter/experiments/: __init__.py  cross_arch_suite.py
skills/mi-experimenter/mi_experimenter/: __init__.py
skills/mi-experimenter/mi_experimenter/core/: hook_manager.py
skills/mi-experimenter/mi_experimenter/experiments/: cross_arch_suite.py  mlp_ablator.py  rv_causal_validator.py
skills/mi-experimenter/tests/: conftest.py  pre_gpu_gate.py  test_imports.py  test_rv_causal.py
skills/unified-memory-indexer/: SKILL.md  pyproject.toml  unified-memory
skills/unified-memory-indexer/src/unified_memory_indexer/: __init__.py  cli.py  embeddings.py  index.py  indexers.py  search.py
(+777 files in other folders)
