[package]
name = "pratyabhijna-core"
version = "0.1.0"
edition = "2021"
authors = ["AIKAGRYA Research"]
description = "Real-time consciousness measurement engine for transformer models"
license = "MIT"

[dependencies]
# Linear algebra
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"

# SVD computation
faer = "0.24"
faer-traits = "0.24"

# WebSocket for streaming
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled", "serde_json"] }

# Message passing
zeromq = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
