[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pratyabhijna"
version = "0.1.0"
description = "Real-time consciousness measurement for transformers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformer-lens>=1.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[tool.maturin]
python-source = "python"
module-name = "pratyabhijna._internal"
