[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rv_toolkit"
version = "0.1.0"
description = "Representational Volume (R_V) metrics for measuring geometric signatures of recursive self-reference in transformers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AIKAGRYA Research" }
]
keywords = ["mechanistic-interpretability", "transformers", "consciousness", "geometry", "activation-patching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
transformers = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]
all = [
    "rv_toolkit[dev,transformers]",
]

[project.scripts]
rv-toolkit = "rv_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/aikagrya/rv_toolkit"
Documentation = "https://aikagrya.org/rv_toolkit"
Repository = "https://github.com/aikagrya/rv_toolkit"

[tool.hatch.build.targets.wheel]
packages = ["rv_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
